2003-08-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * IO/Cluster.pm: Fiddled with the quality flags for Cluster output,
          to get rid of an uninitalised value warning. Still need to go to
          character quality flags.
          
        * Query/Query/USNOA2.pm: Changed the id() of the downloaded USNO-A2
          stars to be numberic, otherwise we break the cluster format which
          requires numeric id's. Also tweaked the $catalog->pushstar() line
          so if the Astro::Coords object in the Astro::Catalog::Star object
          is broken (bogus dec?) its not going to get included in the catalog.
        
2003-08-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Query/Query/SIMBAD.pm: All the functionality of Astro::SIMBAD
	integrated into Astro::Catalog... 

	* Star/Star.pm: Add startype, spectype, longstartype and moreinfo
	needed by SIMBAD query.

2003-08-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Transport/*.pm: Reorganized as part of SkyCat work 

	* Query/Query/*.pm: All Query classes reorganised to make SkyCat
	easier. 

	* Query/Query.pm: Much reorganization to support SkyCat class. 

	* Query/Query/SkyCat.pm: Now forms a query and parses the results
	for an abritrary SkyCat-enabled server. Still not ready for prime
	time.

	* t/4_*.t: All query tests now use helper.pl
	
	* t/helper.pl: Reusable test components now in separate file 

2003-08-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Transport/REST.pm (useragent): Instantiate useragent on demand
	rather than via configure (useful for skycat interface). Separate
	construction of URL from retrieval of URL to allow simpler subclassing.

2003-07-30  Tim Jenness  <timj@jach.hawaii.edu>

	* IO/TST.pm: Add TST format reader. Still has debug.

2003-07-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved Astro::Catalog::BaseQuery to be Astro::Catalog::Query in
          preparation for it be a proper polymorphic factory class for
          generic catalogue queries.
        