@@ -131,5 +131,5 @@ __DATA__
 5 colours were created
 B R V B-R B-V
 Origin: <UNKNOWN>   Field Centre: RA 01 10 12.90, Dec +60 04 35.90   Catalogue Radius: 1 arcmin
-00080  U1500_01194794  09 55 39.00  +60 07 23.60  0.000  0.000  16.4  0.4  0  16.1  0.1  0  16.3  0.3  0  0.3  0.05  0  0.1  0.02  0  
-00081  U1500_01194795  10 44 57.00  +12 34 53.50  0.000  0.000  9.3  0.2  0  9.5  0.6  0  9.1  0.1  0  0.2  0.07  0  -0.2  0.05  0  
+00080  U1500_01194794  09 55 39.00  60 07 23.60  0.000  0.000  16.4  0.4  0  16.1  0.1  0  16.3  0.3  0  0.3  0.05  0  0.1  0.02  0  
+00081  U1500_01194795  10 44 57.00  12 34 53.50  0.000  0.000  9.3  0.2  0  9.5  0.6  0  9.1  0.1  0  0.2  0.07  0  -0.2  0.05  0  
